[git] IDEA-82033 Process merge which failed because of invalid git executable friendlier
ExecutableValidator: add support to show message instead of notifications.
Use this support to make Git -> Merge behavior better.

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -500,7 +500,7 @@ git.commit.message.empty=Please specify commit message
 git.commit.message.empty.title=Commit Message Is Empty
 
 git.executable.notification.title=Can't start Git
-git.executable.notification.description=Probably the path to Git executable is not valid. <a href=''>Fix it.</a>
+git.executable.notification.description=Probably the path to Git executable is not valid.
 git.executable.dialog.title=Git executable
 git.executable.dialog.description=Specify the full path to Git executable
 git.executable.dialog.error=It doesn't appear to be a valid Git executable
