--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -358,7 +358,7 @@ reset.type=Reset &Type:
 reset.validate.tooltip=Validate the commit pointer and check the content of referenced commit.
 reset.validate=&Validate
 resetting.title=Resetting HEAD...
-revert.action.name=&Revert
+revert.action.name=&Revert...
 revert.reverting.mulitple=Reverting {0} files
 revert.reverting=Reverting files...
 revision.graph=RevisionGraph
