all capitals in dialog title

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -203,7 +203,7 @@ pull.getting.remote.branches=Getting remote branches
 pull.remote.tooltip=Registered remote name or URL.
 pull.remote=Re&mote:
 pull.retrieving.remotes=Retrieving remotes
-pull.title=Pull changes
+pull.title=Pull Changes
 pull.url.message=Enter remote repository URL to pull/merge (empty for default):
 pull.url.title=Pull URL
 pulling.title=Pulling changes from {0}
